Added a rust rating trait (up to 21 severity ratings) Changed timestamp to ISO 8601 Updated counter trait layout (bigger + button) Stores last entry the user was on and automatically moves to it Added option to disable the automatic file sharing Added option to disable navigation if no data collected Updated tutorial Modified trait sample file Started work on a datagrid viewer (work in progress)

--- a/Field Book/res/layout/advanced.xml
+++ b/Field Book/res/layout/advanced.xml
@@ -87,6 +87,34 @@
                 android:layout_height="25dp" />
 
             <CheckBox
+                android:id="@+id/disableShare"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="@string/disableshare"
+                android:textColor="#000000"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="25dp" />
+
+            <CheckBox
+                android:id="@+id/disableEntryNav"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="@string/disableentrynav"
+                android:textColor="#000000"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="25dp" />
+
+            <CheckBox
                 android:id="@+id/cycle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
