--- a/Field Book/res/layout/main.xml
+++ b/Field Book/res/layout/main.xml
@@ -423,6 +423,10 @@
                 layout="@layout/trait_counter"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" />
+            <include
+                layout="@layout/trait_rustrating"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content" />
 
         </LinearLayout>
 
