--- a/Field Book/res/layout/trait_counter.xml
+++ b/Field Book/res/layout/trait_counter.xml
@@ -3,8 +3,8 @@
     android:id="@+id/counterLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:visibility="gone"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:visibility="visible">
 
     <LinearLayout
         android:id="@+id/counter"
@@ -36,14 +36,15 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="horizontal"
+            android:paddingTop="10dp">
+
 
             <LinearLayout
-                android:layout_width="wrap_content"
+                android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:orientation="horizontal"
-                android:paddingTop="30dp">
+                android:orientation="vertical">
 
                 <Button
                     android:id="@+id/minusBtn"
@@ -56,31 +57,6 @@
                     android:textSize="30dp"
                     android:textStyle="bold" />
 
-                <View
-                    android:layout_width="10dp"
-                    android:layout_height="wrap_content" />
-
-                <Button
-                    android:id="@+id/addBtn"
-                    android:layout_width="130dp"
-                    android:layout_height="60dp"
-                    android:background="@android:drawable/btn_default"
-                    android:gravity="center"
-                    android:minWidth="130dp"
-                    android:text="@string/plusday"
-                    android:textColor="#000000"
-                    android:textSize="30dp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal"
-                android:paddingTop="10dp">
-
                 <Button
                     android:id="@+id/clearCounterBtn"
                     android:layout_width="wrap_content"
@@ -92,10 +68,22 @@
                     android:textColor="#000000"
                     android:textSize="30dp"
                     android:textStyle="bold" />
-
             </LinearLayout>
+
+
+            <Button
+                android:id="@+id/addBtn"
+                android:layout_width="130dp"
+                android:layout_height="120dp"
+                android:background="@android:drawable/btn_default"
+                android:gravity="center"
+                android:minWidth="130dp"
+                android:text="@string/plusday"
+                android:textColor="#000000"
+                android:textSize="60dp"
+                android:textStyle="bold" />
+
         </LinearLayout>
     </LinearLayout>
-
 </LinearLayout>
 
