Fixed day of year advanced setting Disable left, right, or both entry arrows in advanced settings Renamed exported files to avoid potentially overwriting Spaces in input file column names are replaced with underscores More errors are written to error logs Fixed a bug that cause a crash when toggling visibility of nonexistent traits Fixed a bug that caused a crash when getting location Fixed a bug that caused the unique id to incorrectly indicate it was duplicated Fixed a bug that caused collected photos to rotate on certain devices Fixed a bug that prevented export or import of the app database

--- a/Field Book/res/layout/advanced.xml
+++ b/Field Book/res/layout/advanced.xml
@@ -73,6 +73,19 @@
                 android:layout_height="25dp" />
 
             <CheckBox
+                android:id="@+id/barcodeScan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="@string/barcodeScan"
+                android:textColor="#000000"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="25dp" />
+
+            <CheckBox
                 android:id="@+id/jumpToPlot"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -101,11 +114,25 @@
                 android:layout_height="25dp" />
 
             <CheckBox
-                android:id="@+id/disableEntryNav"
+                android:id="@+id/disableEntryNavLeft"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:checked="false"
-                android:text="@string/disableentrynav"
+                android:text="@string/disableentrynavleft"
+                android:textColor="#000000"
+                android:textSize="30dp"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_height="25dp" />
+
+            <CheckBox
+                android:id="@+id/disableEntryNavRight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="false"
+                android:text="@string/disableentrynavright"
                 android:textColor="#000000"
                 android:textSize="30dp"
                 android:textStyle="bold" />
