--- a/Field Book/res/layout/trait_photo.xml
+++ b/Field Book/res/layout/trait_photo.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:visibility="gone"
-    android:orientation="vertical"
-    android:padding="20dp">
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/photoArea"
