--- a/Field Book/res/layout/datagrid.xml
+++ b/Field Book/res/layout/datagrid.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-    <ScrollView
-        android:id="@+id/layout"
+    <LinearLayout
+        android:id="@+id/gridtableLayout"
+        android:layout_width="wrap_content"
         android:layout_height="500dp"
-        android:scrollbars="horizontal|vertical"
-        android:layout_width="match_parent"
-        android:layout_marginTop="5dip"
-        android:scrollbarStyle="outsideInset"
-        android:fillViewport="true">
-        <HorizontalScrollView
-            android:id="@+id/horizontalView"
-            android:layout_height="wrap_content"
-            android:scrollbars="horizontal|vertical"
+        android:orientation="horizontal">
+
+        <GridView
+            android:id="@+id/tableLayout1"
             android:layout_width="wrap_content"
-            android:layout_marginTop="5dip">
-            <TableLayout
-                android:id="@+id/tableLayout1"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="10dp"
-                android:stretchColumns="*"></TableLayout>
-        </HorizontalScrollView>
-    </ScrollView>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="#000000"
+            android:clipChildren="true"
+            android:gravity="center"
+            android:horizontalSpacing="1dp"
+            android:scrollbarAlwaysDrawHorizontalTrack="true"
+            android:scrollbarAlwaysDrawVerticalTrack="true"
+            android:scrollbars="horizontal|vertical"
+            android:stretchMode="columnWidth"
+            android:verticalSpacing="1dp" />
+
+    </LinearLayout>
+
 
     <LinearLayout
         android:layout_width="wrap_content"
