--- a/Field Book/res/layout/main.xml
+++ b/Field Book/res/layout/main.xml
@@ -78,6 +78,7 @@
                     android:textColor="#000000"
                     android:textSize="30dp"
                     android:textStyle="bold" />
+
             </TableRow>
 
             <TableRow
@@ -155,7 +156,7 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/area"
+                android:text="@string/traitdetails"
                 android:textColor="#000000"
                 android:textSize="20dp"
                 android:textStyle="bold" />
@@ -431,35 +432,6 @@
         </LinearLayout>
 
         <Button
-            android:id="@+id/clearBtn4"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:background="@android:drawable/btn_default"
-            android:gravity="center"
-            android:minWidth="150dp"
-            android:text="@string/clear"
-            android:textColor="#000000"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            android:visibility="gone" />
-
-        <Button
-            android:id="@+id/clearBtn2"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_gravity="center"
-            android:background="@android:drawable/btn_default"
-            android:gravity="center"
-            android:minWidth="150dp"
-            android:text="@string/clear"
-            android:textColor="#000000"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            android:visibility="gone" />
-
-
-        <Button
             android:id="@+id/clearBtn"
             android:layout_width="wrap_content"
             android:layout_height="60dp"
@@ -473,31 +445,5 @@
             android:textStyle="bold"
             android:visibility="gone" />
 
-        <Button
-            android:id="@+id/clearBtn5"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:layout_gravity="center_horizontal"
-            android:background="@android:drawable/btn_default"
-            android:gravity="center"
-            android:minWidth="150dp"
-            android:text="@string/clear"
-            android:textColor="#000000"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            android:visibility="gone" />
-
-        <Button
-            android:id="@+id/clearDateBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="60dp"
-            android:background="@android:drawable/btn_default"
-            android:gravity="center"
-            android:minWidth="130dp"
-            android:text="@string/clear"
-            android:textColor="#000000"
-            android:textSize="30dp"
-            android:textStyle="bold"
-            android:visibility="gone" />
     </LinearLayout>
 </ScrollView>
