--- a/Field Book/res/layout/trait_boolean.xml
+++ b/Field Book/res/layout/trait_boolean.xml
@@ -15,7 +15,7 @@
         android:src="@drawable/keep" />
 
     <Button
-        android:id="@+id/clearBtn5"
+        android:id="@+id/clearBoolean"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_gravity="center_horizontal"
