--- a/Field Book/app/src/main/res/layout/main.xml
+++ b/Field Book/app/src/main/res/layout/main.xml
@@ -198,6 +198,7 @@
                 android:focusableInTouchMode="true" />
 
             <LinearLayout
+                android:id="@+id/plotSearchBox"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:gravity="center"
