Finalized changes for smaller screens Drag and drop traits to reorder Reorganized trait row Changed trait copying protocol

--- a/Field Book/app/src/main/res/layout-sw600dp/trait_categorical.xml
+++ b/Field Book/app/src/main/res/layout-sw600dp/trait_categorical.xml
@@ -18,9 +18,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:columnCount="3"
+            android:alignmentMode="alignBounds"
             android:orientation="horizontal"
             android:paddingTop="15dp">
-
 
             <Button
                 android:id="@+id/q1"
