--- a/Field Book/app/src/main/res/layout-sw600dp/main.xml
+++ b/Field Book/app/src/main/res/layout-sw600dp/main.xml
@@ -26,8 +26,7 @@
         <LinearLayout
             android:id="@+id/infoBarLayout"
             android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.2"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TableLayout
@@ -122,45 +121,46 @@
         <LinearLayout
             android:id="@+id/plotTraitLayout"
             android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.25"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <LinearLayout
+            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="center_horizontal"
-                android:paddingLeft="20dp"
-                android:paddingRight="20dp">
+                android:layout_height="fill_parent"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp"
+                android:stretchColumns="1">
 
-                <ImageView
-                    android:id="@+id/traitLeft"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.15"
-                    android:adjustViewBounds="true"
-                    android:paddingRight="5dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/l_arrow" />
-                <Spinner
-                    android:id="@+id/traitType"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="0.6"
-                    android:gravity="center" />
+                <TableRow>
+                    <ImageView
+                        android:id="@+id/traitLeft"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_weight=".1"
+                        android:layout_gravity="center_vertical"
+                        android:paddingRight="5dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/l_arrow" />
 
-                <ImageView
-                    android:id="@+id/traitRight"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.15"
-                    android:adjustViewBounds="true"
-                    android:paddingLeft="5dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/r_arrow" />
-            </LinearLayout>
+                    <Spinner
+                        android:id="@+id/traitType"
+                        android:layout_width="0dp"
+                        android:layout_weight=".8"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="center" />
+
+                    <ImageView
+                        android:id="@+id/traitRight"
+                        android:layout_width="50dp"
+                        android:layout_height="50dp"
+                        android:layout_weight=".1"
+                        android:adjustViewBounds="true"
+                        android:paddingLeft="5dp"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/r_arrow" />
+                </TableRow>
+            </TableLayout>
 
             <LinearLayout
                 android:layout_width="fill_parent"
@@ -186,129 +186,122 @@
                 android:orientation="horizontal"
                 android:paddingTop="5dp">
 
-                <ImageView
-                    android:id="@+id/rangeLeft"
-                    android:layout_width="0dp"
+                <TableLayout
+                    android:layout_width="fill_parent"
                     android:layout_height="fill_parent"
-                    android:layout_weight="0.1"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/ml_arrow" />
+                    android:layout_gravity="center"
+                    android:stretchColumns="1">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:orientation="vertical">
+                    <TableRow>
+                        <ImageView
+                            android:id="@+id/rangeLeft"
+                            android:layout_width="130dp"
+                            android:layout_height="130dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/ml_arrow" />
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/rangeName"
+                        <GridLayout
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:gravity="right"
-                            android:minWidth="150dp"
-                            android:paddingRight="10dp"
-                            android:text="@string/range"
-                            android:textColor="@color/s_text"
-                            android:textSize="@dimen/text_size_xlarge"
-                            android:textStyle="bold" />
+                            android:columnCount="3"
+                            android:layout_gravity="center"
+                            android:orientation="horizontal">
 
-                        <EditText
-                            android:id="@+id/range"
-                            android:layout_width="120dp"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:imeOptions="actionDone"
-                            android:inputType="phone"
-                            android:singleLine="true"
-                            android:text=""
-                            android:textColor="#000000"
-                            android:textSize="@dimen/text_size_xlarge"
-                            android:textStyle="bold" />
+                            <TextView
+                                android:id="@+id/rangeName"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:gravity="right"
+                                android:paddingRight="10dp"
+                                android:text="@string/range"
+                                android:textColor="@color/s_text"
+                                android:textSize="@dimen/text_size_xlarge"
+                                android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/tvRange"
-                            android:layout_width="120dp"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:singleLine="true"
-                            android:text=""
-                            android:textColor="#000000"
-                            android:textSize="@dimen/text_size_xlarge"
-                            android:textStyle="bold"
-                            android:visibility="gone" />
-                    </LinearLayout>
+                            <EditText
+                                android:id="@+id/range"
+                                android:layout_width="80dp"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:imeOptions="actionDone"
+                                android:inputType="phone"
+                                android:singleLine="true"
+                                android:text=""
+                                android:textColor="#000000"
+                                android:textSize="@dimen/text_size_large"
+                                android:textStyle="bold" />
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal"
-                        android:paddingTop="5dp">
+                            <TextView
+                                android:id="@+id/tvRange"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:padding="0dp"
+                                android:singleLine="true"
+                                android:text=""
+                                android:textColor="#000000"
+                                android:textSize="@dimen/text_size_xlarge"
+                                android:textStyle="bold"
+                                android:visibility="gone" />
 
-                        <TextView
-                            android:id="@+id/plotName"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            android:gravity="right"
-                            android:minWidth="150dp"
-                            android:paddingRight="10dp"
-                            android:text="@string/plot"
-                            android:textColor="@color/s_text"
-                            android:textSize="@dimen/text_size_xlarge"
-                            android:textStyle="bold" />
+                            <TextView
+                                android:id="@+id/plotName"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center_vertical"
+                                android:gravity="right"
+                                android:paddingRight="10dp"
+                                android:text="@string/plot"
+                                android:textColor="@color/s_text"
+                                android:textSize="@dimen/text_size_xlarge"
+                                android:textStyle="bold" />
 
-                        <EditText
-                            android:id="@+id/plot"
-                            android:layout_width="120dp"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:imeOptions="actionDone"
-                            android:inputType="phone"
-                            android:singleLine="true"
-                            android:text=""
-                            android:textColor="#000000"
-                            android:textSize="@dimen/text_size_xlarge"
-                            android:textStyle="bold" />
+                            <EditText
+                                android:id="@+id/plot"
+                                android:layout_width="80dp"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:imeOptions="actionDone"
+                                android:inputType="phone"
+                                android:padding="0dp"
+                                android:singleLine="true"
+                                android:text=""
+                                android:textColor="#000000"
+                                android:textSize="@dimen/text_size_large"
+                                android:textStyle="bold" />
 
-                        <TextView
-                            android:id="@+id/tvPlot"
-                            android:layout_width="120dp"
-                            android:layout_height="wrap_content"
-                            android:gravity="center"
-                            android:singleLine="true"
-                            android:text=""
-                            android:textColor="#000000"
-                            android:textSize="@dimen/text_size_xlarge"
-                            android:textStyle="bold"
-                            android:visibility="gone" />
-                    </LinearLayout>
-                </LinearLayout>
+                            <TextView
+                                android:id="@+id/tvPlot"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:gravity="center"
+                                android:singleLine="true"
+                                android:text=""
+                                android:textColor="#000000"
+                                android:textSize="@dimen/text_size_xlarge"
+                                android:textStyle="bold"
+                                android:visibility="gone" />
 
-                <ImageView
-                    android:id="@+id/rangeRight"
-                    android:layout_width="0dp"
-                    android:layout_height="fill_parent"
-                    android:layout_weight="0.1"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/mr_arrow" />
+                        </GridLayout>
 
+                        <ImageView
+                            android:id="@+id/rangeRight"
+                            android:layout_width="130dp"
+                            android:layout_height="130dp"
+                            android:adjustViewBounds="true"
+                            android:scaleType="fitCenter"
+                            android:src="@drawable/mr_arrow" />
+                    </TableRow>
+                </TableLayout>
             </LinearLayout>
-
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/inputLayout"
             android:layout_width="fill_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.55"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <TextView
