--- a/Field Book/app/src/main/res/layout-sw600dp/traitline.xml
+++ b/Field Book/app/src/main/res/layout-sw600dp/traitline.xml
@@ -1,111 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/listmimic"
     android:gravity="center_vertical"
     android:orientation="horizontal"
-    android:paddingBottom="2dip"
-    android:paddingTop="2dip">
-
-    <View
-        android:layout_width="10dp"
-        android:layout_height="wrap_content" />
+    android:paddingBottom="4dp"
+    android:paddingTop="4dp">
 
     <ImageView
-        android:id="@+id/upBtn"
-        android:layout_width="40dp"
-        android:layout_height="66dp"
-        android:focusable="false"
-        android:src="@drawable/up" />
+        android:id="@+id/popupMenu"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_centerVertical="true"
+        android:paddingLeft="5dp"
+        android:paddingTop="3dp"
+        android:src="@drawable/ic_action_overflow" />
 
     <View
-        android:layout_width="10dp"
-        android:layout_height="wrap_content" />
-
-    <ImageView
-        android:id="@+id/downBtn"
-        android:layout_width="40dp"
-        android:layout_height="66dp"
-        android:focusable="false"
-        android:src="@drawable/down" />
-
-    <View
+        android:id="@+id/spacer1"
         android:layout_width="15dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/popupMenu" />
 
     <CheckBox
         android:id="@+id/visible"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_gravity="center_vertical"
+        android:layout_toRightOf="@+id/spacer1"
         android:scaleX="1.55"
         android:scaleY="1.55"
         android:text="" />
 
     <View
+        android:id="@+id/spacer2"
         android:layout_width="15dp"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/visible" />
 
-    <Button
-        android:id="@+id/copyBtn"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:background="@android:drawable/btn_default"
-        android:drawableTop="@drawable/ic_action_copy"
-        android:focusable="false"
-        android:minWidth="30dp"
-        android:text=""
-        android:textColor="#000000"
-        android:textSize="@dimen/text_size_xsmall"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/delBtn"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:background="@android:drawable/btn_default"
-        android:drawableTop="@drawable/ic_action_discard"
-        android:focusable="false"
-        android:minWidth="30dp"
-        android:text=""
-        android:textColor="#000000"
-        android:textSize="@dimen/text_size_xsmall"
-        android:textStyle="bold" />
-
-    <Button
-        android:id="@+id/edtBtn"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:background="@android:drawable/btn_default"
-        android:drawableTop="@drawable/ic_action_edit"
-        android:focusable="false"
-        android:minWidth="30dp"
-        android:text=""
-        android:textColor="#000000"
-        android:textSize="@dimen/text_size_xsmall"
-        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/text2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="6dip"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/spacer2"
         android:ellipsize="end"
         android:minWidth="120dp"
         android:singleLine="true"
-        android:textSize="@dimen/text_size_small"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textSize="@dimen/text_size_small" />
+
+    <View
+        android:id="@+id/spacer3"
+        android:layout_width="15dp"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/text2" />
 
     <TextView
         android:id="@+id/text1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="6dip"
-        android:layout_marginRight="20dip"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/spacer3"
         android:ellipsize="end"
         android:singleLine="true"
-        android:textSize="@dimen/text_size_small"
-        android:textColor="#000000" />
+        android:textColor="#000000"
+        android:textSize="@dimen/text_size_small" />
 
-</LinearLayout>
+    <View
+        android:id="@+id/spacer4"
+        android:layout_width="15dp"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/text1" />
+
+    <ImageView
+        android:id="@+id/dragSort"
+        android:layout_width="45dp"
+        android:layout_height="45dp"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:background="#FFFFFF"
+        android:padding="3dp"
+        android:src="@drawable/drag_reorder" />
+
+</RelativeLayout>
