--- a/Field Book/app/src/main/res/layout/about.xml
+++ b/Field Book/app/src/main/res/layout/about.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="5dp">
 
     <TextView
         android:id="@+id/tvVersion"
@@ -138,10 +138,10 @@
         <Button
             android:id="@+id/closeBtn"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:background="@android:drawable/btn_default"
-            android:minWidth="150dp"
+            android:minWidth="@dimen/button_default_width"
             android:text="@string/okay"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
