--- a/Field Book/app/src/main/res/layout/changelog.xml
+++ b/Field Book/app/src/main/res/layout/changelog.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:orientation="vertical">
 
     <ScrollView
         android:layout_width="wrap_content"
@@ -18,20 +18,22 @@
             android:layout_weight="1"
             android:orientation="vertical"></LinearLayout>
     </ScrollView>
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="0"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
-        android:paddingTop="10dp"
-        android:layout_weight="0">
+        android:paddingTop="10dp">
+
         <Button
             android:id="@+id/closeBtn"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@android:drawable/btn_default"
-            android:minWidth="150dp"
+            android:minWidth="@dimen/button_default_width"
             android:text="@string/okay"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
