--- a/Field Book/app/src/main/res/layout/config.xml
+++ b/Field Book/app/src/main/res/layout/config.xml
@@ -5,11 +5,6 @@
     android:background="#FFFFFF"
     android:orientation="vertical">
 
-    <View
-        android:layout_width="fill_parent"
-        android:layout_height="1dp"
-        android:background="#000000" />
-
     <ListView
         android:id="@+id/myList"
         android:choiceMode="singleChoice"
@@ -27,10 +22,10 @@
         <Button
             android:id="@+id/closeBtn"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:background="@android:drawable/btn_default"
-            android:minWidth="150dp"
+            android:minWidth="@dimen/button_default_width"
             android:text="@string/close"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
