--- a/Field Book/app/src/main/res/layout/importdialog.xml
+++ b/Field Book/app/src/main/res/layout/importdialog.xml
@@ -104,9 +104,9 @@
         <Button
             android:id="@+id/okBtn"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:background="@android:drawable/btn_default"
-            android:minWidth="150dp"
+            android:minWidth="@dimen/button_default_width"
             android:text="@string/okay"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
