--- a/Field Book/app/src/main/res/layout/location.xml
+++ b/Field Book/app/src/main/res/layout/location.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="5dp">
 
     <EditText
         android:id="@+id/latitude"
@@ -36,16 +36,15 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal"
-        android:weightSum="100">
+        android:paddingTop="10dp">
 
         <Button
             android:id="@+id/getLctnBtn"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
-            android:layout_weight="80"
             android:background="@android:drawable/btn_default"
-            android:minWidth="180dp"
+            android:minWidth="@dimen/button_default_width"
             android:text="@string/getlocation"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -54,11 +53,10 @@
         <Button
             android:id="@+id/saveBtn"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:layout_weight="80"
             android:background="@android:drawable/btn_default"
-            android:minWidth="100dp"
+            android:minWidth="@dimen/button_default_width"
             android:text="@string/okay"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
