--- a/Field Book/app/src/main/res/layout/person.xml
+++ b/Field Book/app/src/main/res/layout/person.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="#FFFFFF"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="5dp">
 
     <EditText
         android:id="@+id/firstName"
@@ -34,15 +34,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingTop="10dp">
 
         <Button
             android:id="@+id/saveBtn"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:background="@android:drawable/btn_default"
-            android:minWidth="150dp"
+            android:minWidth="@dimen/button_default_width"
             android:text="@string/okay"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
