--- a/Field Book/app/src/main/res/layout/savedb.xml
+++ b/Field Book/app/src/main/res/layout/savedb.xml
@@ -33,11 +33,10 @@
         <Button
             android:id="@+id/saveBtn"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-
             android:background="@android:drawable/btn_default"
-            android:minWidth="150dp"
+            android:minWidth="@dimen/button_default_width"
             android:text="@string/okay"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
@@ -46,10 +45,10 @@
         <Button
             android:id="@+id/closeBtn"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:background="@android:drawable/btn_default"
             android:layout_gravity="center"
-            android:minWidth="150dp"
+            android:minWidth="@dimen/button_default_width"
             android:text="@string/close"
             android:textColor="#000000"
             android:textSize="@dimen/text_size_large"
