--- a/Field Book/app/src/main/res/layout/savefile.xml
+++ b/Field Book/app/src/main/res/layout/savefile.xml
@@ -132,30 +132,30 @@
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
-        android:paddingTop="10dp">
+        android:paddingTop="5dp">
 
         <Button
             android:id="@+id/saveBtn"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@android:drawable/btn_default"
-            android:minWidth="150dp"
+            android:minWidth="@dimen/button_default_width"
             android:text="@string/okay"
             android:textColor="#000000"
-            android:textSize="@dimen/text_size_medium"
+            android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
 
         <Button
             android:id="@+id/closeBtn"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@android:drawable/btn_default"
-            android:minWidth="150dp"
+            android:minWidth="@dimen/button_default_width"
             android:text="@string/close"
             android:textColor="#000000"
-            android:textSize="@dimen/text_size_medium"
+            android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
 
     </LinearLayout>
