--- a/Field Book/app/src/main/res/layout/summary.xml
+++ b/Field Book/app/src/main/res/layout/summary.xml
@@ -18,7 +18,7 @@
             android:paddingRight="20dp"
             android:text=""
             android:textColor="#000000"
-            android:textSize="25dp"
+            android:textSize="@dimen/text_size_medium"
             android:textStyle="bold" />
     </ScrollView>
 
@@ -26,20 +26,18 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="horizontal"
-
-        android:layout_weight="0">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/closeBtn"
             android:layout_width="wrap_content"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:background="@android:drawable/btn_default"
-            android:minWidth="150dp"
+            android:minWidth="@dimen/button_default_width"
             android:text="@string/close"
             android:textColor="#000000"
-            android:textSize="30dp"
+            android:textSize="@dimen/text_size_large"
             android:textStyle="bold" />
     </LinearLayout>
 
