Updated sample files Changed multicat to three columns Fixed trait editor edittexts being cut off Current person/location filled in when dialogs are opened Overwritten files moved to Archive folder Fixed a bug with data locking and multicat trait Fixed alignement issue with Quick GoTo Added Other Apps to About dialog App database is backed up to backup.db at onPause

--- a/Field Book/app/src/main/res/layout/main.xml
+++ b/Field Book/app/src/main/res/layout/main.xml
@@ -281,7 +281,6 @@
                                     android:gravity="center"
                                     android:imeOptions="actionDone"
                                     android:inputType="phone"
-                                    android:padding="0dp"
                                     android:singleLine="true"
                                     android:text=""
                                     android:textColor="#000000"
@@ -320,17 +319,6 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:gravity="center"
-                    android:minWidth="100dp"
-                    android:text="@string/currentvalue"
-                    android:textColor="@color/s_text"
-                    android:textSize="@dimen/text_size_medium"
-                    android:textStyle="bold" />
 
                 <EditText
                     android:id="@+id/tNum"
@@ -436,6 +424,11 @@
 
                         <include
                             layout="@layout/trait_rustrating"
+                            android:layout_width="fill_parent"
+                            android:layout_height="wrap_content" />
+
+                        <include
+                            layout="@layout/trait_multicat"
                             android:layout_width="fill_parent"
                             android:layout_height="wrap_content" />
 
