--- a/Field Book/app/src/main/res/layout/savefile.xml
+++ b/Field Book/app/src/main/res/layout/savefile.xml
@@ -53,11 +53,13 @@
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:weightSum="1">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
+                    android:layout_weight=".5"
                     android:orientation="vertical">
 
                     <TextView
@@ -90,9 +92,10 @@
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="15dp"
+                    android:layout_weight=".5"
                     android:orientation="vertical">
 
                     <TextView
