--- a/Field Book/app/src/main/res/layout/about.xml
+++ b/Field Book/app/src/main/res/layout/about.xml
@@ -21,6 +21,18 @@
         android:clickable="true"
         android:textStyle="bold" />
 
+    <TextView
+        android:id="@+id/tvOtherApps"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:text="@string/otherapps"
+        android:textColor="@color/main_colorAccent"
+        android:textSize="@dimen/text_size_medium"
+        android:clickable="true"
+        android:textStyle="bold" />
+
 
     <TextView
         android:id="@+id/developerMsg"
@@ -38,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dip"
-        android:paddingBottom="10dp"
+        android:paddingBottom="5dp"
         android:paddingLeft="10dp"
         android:text="@string/devr"
         android:textColor="#000000"
@@ -76,7 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dip"
-        android:paddingBottom="10dp"
+        android:paddingBottom="5dp"
         android:paddingLeft="10dp"
         android:text="@string/devp"
         android:textColor="#000000"
