--- a/Field Book/app/src/main/res/layout/gotobarcode.xml
+++ b/Field Book/app/src/main/res/layout/gotobarcode.xml
@@ -13,21 +13,6 @@
         android:paddingTop="10dp"
         android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-
-            <Button
-                android:id="@+id/camBtn"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
-                android:background="@android:drawable/btn_default"
-                android:drawableTop="@drawable/ic_action_camera"
-                android:focusable="false"
-                android:minWidth="30dp"
-                android:text="" />
-        </LinearLayout>
-
         <EditText
             android:id="@+id/barcodeid"
             android:layout_width="fill_parent"
@@ -45,6 +30,19 @@
         android:gravity="center_horizontal"
         android:paddingTop="10dp"
         android:orientation="horizontal">
+
+        <Button
+            android:id="@+id/camBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:drawable/btn_default"
+            android:layout_gravity="center"
+            android:minWidth="@dimen/button_default_width"
+            android:text="@string/scan"
+            android:textColor="#000000"
+            android:textSize="@dimen/text_size_large"
+            android:textStyle="bold" />
+
 
         <Button
             android:id="@+id/closeBtn"
