--- a/Field Book/app/src/main/res/layout/languageline.xml
+++ b/Field Book/app/src/main/res/layout/languageline.xml
@@ -7,6 +7,7 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:padding="5dp"
         android:paddingLeft="15dp">
