--- a/Field Book/app/src/main/res/layout/trait_multicat.xml
+++ b/Field Book/app/src/main/res/layout/trait_multicat.xml
@@ -11,11 +11,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:numColumns="4"
+        android:numColumns="3"
         android:paddingTop="15dp" />
 
     <Button
-        android:id="@+id/clearCatBtn"
+        android:id="@+id/clearMultiCatBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
