--- a/Field Book/app/src/main/res/layout/trait_rustrating.xml
+++ b/Field Book/app/src/main/res/layout/trait_rustrating.xml
@@ -8,7 +8,9 @@
 
     <ScrollView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center_horizontal">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -19,6 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:gravity="center_horizontal"
                 android:columnCount="6"
                 android:orientation="horizontal"
                 android:paddingTop="10dp">
